--- a/contracts/Makefile
+++ b/contracts/Makefile
@@ -1,6 +1,6 @@
 $MAKEFILES = $(shell find . -maxdepth 3 -type f -name Makefile)
 # SUBDIRS   = $(filter-out ./,$(dir $($MAKEFILES)))
-SUBDIRS = token pair factory library router 
+SUBDIRS = token gladius-subscriptions gladius-coin-emitter
 default: build
 
 all: test
