removed example accounts

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-PEGGED_TOKEN_ADMIN_SECRET=SAFUYRYPXDTUEZJCNJ3GL32TMXO2LZRRRTFVMEZMUEB5AVZLKG2KU5RG
-GLADIUS_ADMIN_SECRET=SDO6MB7HZSRWUP23CJRYC4TXLIIUSACTR7TMI6KHTWCSO7GM4MPZRJYQ
+PEGGED_TOKEN_ADMIN_SECRET=
+GLADIUS_ADMIN_SECRET=
