--- a/contracts/gladius-subscriptions/Cargo.toml
+++ b/contracts/gladius-subscriptions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "gladius-coin-emitter"
+name = "gladius-subscriptions"
 description = "Gladius Coin Subscriptions"
 version = "0.0.1"
 edition = "2021"
