--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "setup": "node dist/scripts/setup.js",
-    "test": "node dist/scripts/test.js"
+    "setup": "yarn build && node dist/scripts/setup.js",
+    "test": "yarn build && node dist/scripts/test.js"
   },
   "devDependencies": {
     "@stellar/tsconfig": "^1.0.2",
