--- a/contracts/gladius-nft/Makefile
+++ b/contracts/gladius-nft/Makefile
@@ -7,6 +7,7 @@ test: build
 
 build:
 	soroban contract build
+	soroban contract optimize --wasm target/wasm32-unknown-unknown/release/gladius_nft.wasm  
 	@ls -l target/wasm32-unknown-unknown/release/*.wasm
 
 fmt:
