--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "tsc",
     "setup": "yarn build && node dist/scripts/setup.js",
+    "ipfs": "yarn build && node dist/scripts/image_to_pinata.js",
     "test": "yarn build && node dist/scripts/test.js"
   },
   "devDependencies": {
@@ -20,6 +21,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@pinata/sdk": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "stellar-sdk": "^11.2.2"
