--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@pinata/sdk": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
+    "firebase-admin": "^12.0.0",
+    "firebase-functions": "^4.9.0",
     "stellar-sdk": "^11.2.2"
   }
 }
