--- a/package.json
+++ b/package.json
@@ -24,6 +24,6 @@
     "@pinata/sdk": "^2.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
-    "stellar-sdk": "^11.3.0"
+    "@stellar/stellar-sdk": "^12.2.0"
   }
 }
